<resources>
    <string name="favorites">favorite</string>
    <string name="home_visit">home visit</string>
    <string name="baby_s_book">baby`s book</string>
    <string name="online_visit">online visit</string>
    <string name="app_name">Doctor</string>
    <string name="ali_ahmadi">Dr.Ali Ahmadi</string>
    <string name="dr_mina_sadeghi">Dr.Mina Sadeghi</string>
    <string name="dr_maryam_alavi">Dr.Maryam alavi</string>
    <string name="dr_shahab_mohammadi">Dr.Shahab Mohammadi</string>
    <string name="dr_shirin_alavi">Dr.Shirin Alavi</string>
    <string name="expertise">Expertise</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="name">name</string>
    <string name="Pediatrician">Pediatrician</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

</resources>