<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infodoctor">


    <TextView
        android:id="@+id/name"
        android:text="@string/name"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100dp"/>

    <TextView
        android:id="@+id/address"
        android:text="@string/address"
        android:layout_marginTop="250dp"
        android:layout_marginStart="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100dp"/>


    <TextView
        android:id="@+id/phone"
        android:text="@string/phone"
        android:layout_marginTop="350dp"
        android:layout_marginStart="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100dp"/>


</FrameLayout>